--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <nav>
+        <a href="" class="logo">LOGO</a>
+        <ul>
+            <li>
+                <a href="">Home</a>
+            </li>
+            <li>
+                <a href="">About</a>
+            </li>
+            <li>
+                <a href="">Contact</a>
+            </li>
+            <li>
+                <a href="">FQA</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
